--- a/Sprint5/Countries/src/views/dashboard.ejs
+++ b/Sprint5/Countries/src/views/dashboard.ejs
@@ -7,7 +7,7 @@
 <body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col">
 
     <main class="container mx-auto mt-6 flex-grow">
-        <h2 class="text-xl font-semibold mb-6">Lista de Paises</h2>
+        <h2 class="text-xl font-semibold mb-6">Listado de Paises</h2>
 
         <% if (message && message.length > 0) { %>
             <div class="mb-4 bg-green-100 p-4 rounded-md text-green-700">
